# ai-agent

./: .gitignore  Cargo.toml  README.md
src/: agent_config.rs  agent_context.rs  agent_core.rs  agent_error.rs  agent_hooks.rs  agent_mcp.rs  agent_memory.rs  agent_permissions.rs  agent_plugin.rs  agent_prompt.rs  agent_provider.rs  agent_session.rs  agent_skills.rs  agent_telemetry.rs  agent_tools.rs  agent_types.rs  lib.rs  prelude.rs
src/test_utils/: mod.rs
tests/: integration_test.rs
