[package]
name = "ai-agent"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["."]

[dependencies]
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
serde_yaml = "0.9"
futures = "0.3"
tokio = { version = "1", features = ["rt", "fs", "process", "io-util", "time", "sync"] }
uuid = { version = "1", features = ["v4"] }

[features]
prompt = []
context = []
telemetry = []
memory = []
skills = []
